# founder-dev-test

./: README.md
backend/: .env  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  exceptions.py
backend/app/api/endpoints/: flow.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/engine/: service.py
backend/app/engine/configs/: if_node_config.py  set_node_config.py  start_node_config.py
backend/app/engine/executors/: base_executor.py  if_node_executor.py  set_node_executor.py  start_node_executor.py
backend/app/engine/nodes/: base.py  if_node.py  set_node.py  start_node.py
backend/app/models/: flow.py
backend/app/services/: flow.py
backend/tests/api/: test_flow.py
backend/tests/engine/: test_if_node.py  test_nodes.py  test_service.py  test_set_node.py  test_start_node.py  utils.py
backend/tests/fixtures/: __init__.py  api.py  db.py  factories.py
frontend/: .env  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  Sidebar.tsx  StartNode.css  StartNode.tsx
frontend/src/flow/: Flow.css  Sidebar.tsx  StoragePanel.tsx  index.tsx
frontend/src/flow/lib/: node.types.ts
frontend/src/flow/lib/core/: config.ts
frontend/src/flow/lib/gateway/: server.ts
frontend/src/flow/lib/helpers/: nodes.to.records.ts
frontend/src/flow/lib/storage/: edges.ts  flow.ts  index.ts  nodes.ts
frontend/src/flow/nodes/: IfNode.tsx  SetNode.tsx  StartNode.tsx
frontend/src/lib/helpers/: generate.node.id.ts
