[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nich.morgan <morgannicholson1371@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = { version = "^0.23.2", extras = ["standard"] }
pydantic-settings = "^2.0.3"
pymongo = "^4.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pymongo-inmemory = "^0.3.1"
polyfactory = "^2.8.1"
httpx = "^0.25.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
